# gproxy

./: .gitignore  Cargo.toml  README.md  README.zh_CN.md  RELEASE_NOTE.md  pnpm-lock.yaml  pnpm-workspace.yaml  release.sh
apps/gproxy/: Cargo.toml  README.md  README.zh_CN.md
apps/gproxy/src/: main.rs  web.rs
apps/gproxy/src/workers/: health_broadcaster.rs  quota_reconciler.rs  rate_limit_gc.rs  usage_sink.rs
crates/gproxy-admin/: Cargo.toml
crates/gproxy-api/: Cargo.toml  README.md  README.zh_CN.md
crates/gproxy-api/src/: auth.rs  bootstrap.rs  cors.rs  downstream_log.rs  error.rs  lib.rs  login.rs  router.rs
crates/gproxy-api/src/admin/: config_toml.rs  credentials.rs  dashboard.rs  file_permissions.rs  mod.rs  models.rs  permissions.rs  providers.rs  quotas.rs  rate_limits.rs  reload.rs  requests.rs  settings.rs  update.rs  usages.rs  users.rs
crates/gproxy-api/src/provider/: handler.rs  mod.rs  oauth.rs  websocket.rs  ws_bridge.rs
crates/gproxy-api/src/user/: keys.rs  mod.rs  quota.rs  usages.rs
crates/gproxy-core/: Cargo.toml
crates/gproxy-core/src/: config.rs  dispatch.rs  file.rs  identity.rs  lib.rs  policy.rs  quota.rs  routing.rs  types.rs
crates/gproxy-core/src/redis_backend/: affinity.rs  mod.rs  quota.rs  rate_limit.rs
crates/gproxy-core/tests/: services.rs
sdk/gproxy-channel/: Cargo.toml  README.md
sdk/gproxy-channel/examples/: hello_openai.rs
sdk/gproxy-channel/src/: billing.rs  channel.rs  count_tokens.rs  executor.rs  http_client.rs  lib.rs  meta.rs  provider.rs  registry.rs  request.rs  response.rs  usage.rs
sdk/gproxy-channel/src/channels/: aistudio.rs  anthropic.rs  antigravity.rs  claudecode.rs  codex.rs  custom.rs  deepseek.rs  geminicli.rs  groq.rs  mod.rs  nvidia.rs  openai.rs  openrouter.rs  vertex.rs  vertexexpress.rs
sdk/gproxy-channel/src/channels/chatgpt/: channel.rs  image.rs  image_edit.rs  mod.rs  models.rs  pow.rs  prepare_p.rs  request_builder.rs  sentinel.rs  session.rs  sse_to_openai.rs  sse_v1.rs  stream_reshaper.rs
sdk/gproxy-channel/src/channels/pricing/: aistudio.json  anthropic.json  claudecode.json  codex.json  deepseek.json  geminicli.json  groq.json  openai.json  openrouter.json
sdk/gproxy-channel/src/utils/: claude_cache_control.rs  claudecode_cookie.rs  mod.rs
sdk/gproxy-channel/tests/: chatgpt_live_e2e.rs  chatgpt_stream_pipeline.rs  claude_sampling_strip.rs  dispatch_alignment.rs  execute_once_integration.rs  local_count.rs  routing_alignment.rs
sdk/gproxy-engine/: Cargo.toml  README.md
sdk/gproxy-engine/src/: engine.rs  lib.rs  retry.rs  transform_dispatch.rs
sdk/gproxy-engine/src/routing/: classify.rs
sdk/gproxy-engine/src/store/: mod.rs  runtime.rs
sdk/gproxy-middleware/: Cargo.toml
sdk/gproxy-protocol/: Cargo.toml  README.md
sdk/gproxy-protocol/src/: kinds.rs  lib.rs  stream.rs
sdk/gproxy-protocol/src/claude/: mod.rs  types.rs
sdk/gproxy-protocol/src/claude/count_tokens/: request.rs  response.rs  types.rs
sdk/gproxy-protocol/src/claude/create_message/: request.rs  response.rs  stream.rs  types.rs
sdk/gproxy-protocol/src/claude/file_delete/: request.rs  response.rs
sdk/gproxy-protocol/src/claude/file_download/: request.rs  response.rs
sdk/gproxy-protocol/src/claude/file_get/: request.rs  response.rs
sdk/gproxy-protocol/src/claude/file_list/: request.rs  response.rs
sdk/gproxy-protocol/src/claude/file_upload/: request.rs  response.rs
sdk/gproxy-protocol/src/claude/model_get/: request.rs  response.rs
sdk/gproxy-protocol/src/claude/model_list/: request.rs  response.rs  types.rs
sdk/gproxy-protocol/src/gemini/: mod.rs  types.rs
sdk/gproxy-protocol/src/gemini/batch_embed_contents/: request.rs  response.rs  types.rs
sdk/gproxy-protocol/src/gemini/count_tokens/: request.rs  response.rs  types.rs
sdk/gproxy-protocol/src/gemini/embeddings/: request.rs  response.rs  types.rs
sdk/gproxy-protocol/src/gemini/generate_content/: request.rs  response.rs  types.rs
sdk/gproxy-protocol/src/gemini/generate_videos/: request.rs  response.rs  types.rs
sdk/gproxy-protocol/src/gemini/live/: request.rs  response.rs  types.rs
sdk/gproxy-protocol/src/gemini/model_get/: request.rs  response.rs  types.rs
sdk/gproxy-protocol/src/gemini/model_list/: request.rs  response.rs
sdk/gproxy-protocol/src/gemini/stream_generate_content/: request.rs  response.rs  stream.rs  types.rs
sdk/gproxy-protocol/src/gemini/video_content_get/: request.rs  response.rs  types.rs
sdk/gproxy-protocol/src/gemini/video_operation_get/: request.rs  response.rs  types.rs
sdk/gproxy-protocol/src/openai/: mod.rs  types.rs
sdk/gproxy-protocol/src/openai/compact_response/: request.rs  response.rs  types.rs
sdk/gproxy-protocol/src/openai/count_tokens/: request.rs  response.rs  types.rs
sdk/gproxy-protocol/src/openai/create_chat_completions/: request.rs  response.rs  stream.rs  types.rs
sdk/gproxy-protocol/src/openai/create_image/: request.rs  response.rs  stream.rs  types.rs
sdk/gproxy-protocol/src/transform/: dispatch.rs  mod.rs  utils.rs
sdk/gproxy-provider/: Cargo.toml  README.md
sdk/gproxy-provider/src/: affinity.rs  billing.rs  channel.rs  count_tokens.rs  dispatch.rs  engine.rs  health.rs  http_client.rs  lib.rs  request.rs  response.rs  retry.rs  store.rs  suffix.rs  transform_dispatch.rs  usage.rs
sdk/gproxy-provider/src/channels/: aistudio.rs  anthropic.rs  antigravity.rs  claudecode.rs  codex.rs  custom.rs  deepseek.rs  geminicli.rs  groq.rs  mod.rs  nvidia.rs  openai.rs  openrouter.rs  vertex.rs  vertexexpress.rs
sdk/gproxy-provider/src/utils/: anthropic_beta.rs  claude_cache_control.rs  claude_sampling.rs  claudecode_cookie.rs  code_assist_envelope.rs  mod.rs  oauth2_refresh.rs  rewrite.rs  sanitize.rs  vertex_normalize.rs
sdk/gproxy-provider/tests/: backend_stress.rs  claude_sampling_strip.rs  dispatch_alignment.rs  local_count.rs
sdk/gproxy-routing/: Cargo.toml  README.md
sdk/gproxy-routing/src/: classify.rs  error.rs  lib.rs  model_extraction.rs  permission.rs  provider_prefix.rs  sanitize.rs
sdk/gproxy-sdk/: Cargo.toml  README.md
sdk/gproxy-sdk/src/: lib.rs
(+485 files in other folders)
