[workspace]
resolver = "2"
members = [
  "sdk/gproxy-sdk",
  "sdk/gproxy-protocol",
  "sdk/gproxy-provider",
  "sdk/gproxy-routing",
  "crates/gproxy-core",
  "crates/gproxy-storage",
  "crates/gproxy-api",
  "crates/gproxy-server",
  "apps/gproxy",
  "apps/gproxy-recorder",
]

[workspace.package]
version = "1.0.2"
edition = "2024"
license = "AGPL-3.0-or-later"
authors = ["LeenHawk <leenhawk@leenhawk.com>"]
description = "A high-performance LLM proxy server written in Rust."
homepage = "https://gproxy.leenhawk.com"
repository = "https://github.com/LeenHawk/gproxy"
readme = "README.md"

[workspace.dependencies]
# Internal SDK crates
gproxy-sdk = { path = "sdk/gproxy-sdk" }
gproxy-protocol = { path = "sdk/gproxy-protocol" }
gproxy-provider = { path = "sdk/gproxy-provider" }
gproxy-routing = { path = "sdk/gproxy-routing" }

# Internal App crates
gproxy-core = { path = "crates/gproxy-core" }
gproxy-storage = { path = "crates/gproxy-storage" }
gproxy-api = { path = "crates/gproxy-api" }
gproxy-server = { path = "crates/gproxy-server" }

# External dependencies
arc-swap = "1"
anyhow = "1"
argon2 = "0.5"
async-stream = "0.3"
axum = { version = "0.8", features = ["http2", "json", "ws"] }
base64 = "0.22"
bytes = "1"
chacha20poly1305 = { version = "0.10", features = ["std"] }
clap = { version = "4", features = ["derive", "env"] }
dashmap = "6"
ed25519-dalek = "2"
futures-util = "0.3"
getrandom = "0.4"
http = "1"
http-body-util = "0.1"
inventory = "0.3"
jsonwebtoken = { version = "10", default-features = false, features = ["rust_crypto", "use_pem"] }
mime_guess = "2"
rand = "0.10"
regex = "1"
rust-embed = "8"
sea-orm = { version = "2.0.0-rc.37", features = ["macros", "runtime-tokio-rustls", "sqlx-sqlite", "sqlx-mysql", "sqlx-postgres", "with-time", "with-uuid", "with-json", "schema-sync", "entity-registry"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
subtle = "2"
sqlx = { version = "0.8", default-features = false, features = ["sqlite", "mysql", "postgres"] }
thiserror = "2"
tiktoken-rs = "0.11"
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }
tokenizers = { version = "0.22", default-features = false, features = ["fancy-regex"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time", "net"] }
tokio-tungstenite = "0.29"
toml = "1"
tower = "0.5"
tower-http = { version = "0.6", features = ["limit"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2"
uuid = { version = "1", features = ["serde", "v4", "v5", "v7"] }
wreq = { version = "6.0.0-rc.28", features = ["json", "cookies", "socks", "stream", "deflate", "gzip", "zstd", "brotli", "ws"] }
wreq-util = "3.0.0-rc.10"
zip = "8"

# Recorder-specific
chrono = { version = "0.4", features = ["serde"] }
hyper = { version = "1", features = ["http1", "http2", "server"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "client-legacy"] }
rcgen = "0.14"
rustls = "0.23"
rustls-pemfile = "2"
tokio-rustls = "0.26"
tokio-socks = "0.5"
webpki-roots = "1"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
