[package]
name = "gproxy"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
gproxy-sdk = { workspace = true }
gproxy-server = { workspace = true }
gproxy-admin = { workspace = true }
gproxy-storage = { workspace = true }
anyhow = { workspace = true }
async-stream = { workspace = true }
axum = { workspace = true }
clap = { workspace = true }
dashmap = { workspace = true }
futures-util = { workspace = true }
mime_guess = { workspace = true }
rand = { workspace = true }
rust-embed = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
wreq = { workspace = true }
wreq-util = { workspace = true }
