[package]
name = "gproxy-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "HTTP API server combining provider routes and admin management."
homepage.workspace = true
repository.workspace = true

[dependencies]
gproxy-sdk = { workspace = true }
gproxy-server = { workspace = true }
gproxy-storage = { workspace = true }
arc-swap = { workspace = true }
axum = { workspace = true }
async-stream = { workspace = true }
base64 = { workspace = true }
ed25519-dalek = { workspace = true }
futures-util = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
wreq = { workspace = true }
wreq-util = { workspace = true }
zip = { workspace = true }

[dev-dependencies]
tower = { workspace = true }
