[package]
name = "gproxy-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "HTTP API server combining provider routes and admin management."
homepage.workspace = true
repository.workspace = true

[dependencies]
gproxy-sdk = { workspace = true }
gproxy-server = { workspace = true }
gproxy-storage = { workspace = true }
axum = { workspace = true }
bytes = { workspace = true }
http = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tower = { workspace = true }
