[package]
name = "gproxy-channel"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Single-channel access layer for gproxy: Channel trait + concrete channels (OpenAI, Anthropic, Gemini, etc.) + thin execute_once executor."
homepage.workspace = true
repository.workspace = true

[features]
default = ["all-channels"]
all-channels = [
    "openai", "anthropic", "aistudio", "vertexexpress",
    "vertex", "geminicli", "claudecode", "codex",
    "antigravity", "nvidia", "deepseek", "groq", "openrouter", "custom"
]
openai = []
anthropic = []
aistudio = []
vertexexpress = []
vertex = []
geminicli = []
claudecode = []
codex = []
antigravity = []
nvidia = []
deepseek = []
groq = []
openrouter = []
custom = []

[dependencies]
gproxy-protocol = { workspace = true }
async-stream = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
dashmap = { workspace = true }
futures-util = { workspace = true }
getrandom = { workspace = true }
http = { workspace = true }
inventory = { workspace = true }
jsonwebtoken = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tiktoken-rs = { workspace = true }
tokenizers = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
wreq = { workspace = true }
wreq-util = { workspace = true }
