[package]
name = "gproxy-middleware"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Cross-protocol transformation engine for LLM API requests and responses."
homepage.workspace = true
repository.workspace = true

[dependencies]
gproxy-protocol = { workspace = true }
bytes = { workspace = true }
futures-util = { workspace = true }
http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tower = { workspace = true }
