[package]
name = "gproxy-protocol"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Wire-format types and cross-protocol transforms for Claude, OpenAI, and Gemini LLM APIs. L0 layer of the gproxy SDK."
homepage.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["llm", "openai", "anthropic", "gemini", "claude"]
categories = ["api-bindings", "data-structures", "encoding"]

[dependencies]
base64 = { workspace = true }
http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
