[package]
name = "gproxy-provider"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "LLM channel/provider engine with multi-channel support."
homepage.workspace = true
repository.workspace = true

[features]
default = ["all-channels"]
all-channels = [
    "openai", "anthropic", "aistudio", "vertexexpress",
    "vertex", "geminicli", "claudecode", "codex",
    "antigravity", "nvidia", "deepseek", "groq", "custom"
]
openai = []
anthropic = []
aistudio = []
vertexexpress = []
vertex = []
geminicli = []
claudecode = []
codex = []
antigravity = []
nvidia = []
deepseek = []
groq = []
custom = []

[dependencies]
gproxy-protocol = { workspace = true }
bytes = { workspace = true }
dashmap = { workspace = true }
http = { workspace = true }
inventory = { workspace = true }
jsonwebtoken = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tiktoken-rs = { workspace = true }
tokenizers = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
wreq = { workspace = true }
