[package]
name = "gproxy-provider"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Deprecated aggregator crate — re-exports gproxy-channel (L1) and gproxy-engine (L2). New code should depend on those directly."
homepage.workspace = true
repository.workspace = true

[features]
default = ["all-channels"]
all-channels = ["gproxy-channel/all-channels", "gproxy-engine/all-channels"]
openai = ["gproxy-channel/openai", "gproxy-engine/openai"]
anthropic = ["gproxy-channel/anthropic", "gproxy-engine/anthropic"]
aistudio = ["gproxy-channel/aistudio", "gproxy-engine/aistudio"]
vertexexpress = ["gproxy-channel/vertexexpress", "gproxy-engine/vertexexpress"]
vertex = ["gproxy-channel/vertex", "gproxy-engine/vertex"]
geminicli = ["gproxy-channel/geminicli", "gproxy-engine/geminicli"]
claudecode = ["gproxy-channel/claudecode", "gproxy-engine/claudecode"]
codex = ["gproxy-channel/codex", "gproxy-engine/codex"]
antigravity = ["gproxy-channel/antigravity", "gproxy-engine/antigravity"]
nvidia = ["gproxy-channel/nvidia", "gproxy-engine/nvidia"]
deepseek = ["gproxy-channel/deepseek", "gproxy-engine/deepseek"]
groq = ["gproxy-channel/groq", "gproxy-engine/groq"]
openrouter = ["gproxy-channel/openrouter", "gproxy-engine/openrouter"]
custom = ["gproxy-channel/custom", "gproxy-engine/custom"]

[dependencies]
gproxy-channel = { workspace = true }
gproxy-engine = { workspace = true }
