[package]
name = "gproxy-routing"
version.workspace = true
edition = "2024"

[dependencies]
gproxy-protocol = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
http = { workspace = true }
regex = { workspace = true }
